# docbot-docker

./: .env  .gitignore  claude_notes.md  connect.sh  docker-compose.yaml  install.sh  log.sh  restart.sh  run.sh  stop.sh
.claude/: settings.local.json
data/: inventory.yaml
docker/: Dockerfile  asound.conf  bringup_entrypoint.sh  entrypoint.sh  overlay_packages.txt  overlay_packages_jetson.txt  packages.txt  requirements.txt
src/: ARCHITECTURE.md  BUILD_AND_TEST_1.md  OLLAMA_SETUP.md  src.repos
src/doc_control/: package.xml  setup.cfg  setup.py
src/doc_control/config/: servo.yaml
src/doc_control/doc_control/: servo_node.py
src/doc_control/launch/: servo.launch.py
src/doc_interfaces/: CMakeLists.txt  package.xml
src/doc_interfaces/msg/: Face.msg  FaceArray.msg
src/doc_system/: CMakeLists.txt  package.xml
src/doc_system/launch/: bringup.launch.py
src/doc_vision/: package.xml  setup.cfg  setup.py
src/doc_vision/config/: face_detection.yaml  insightface.yaml
src/doc_vision/doc_vision/: face_detection_node.py  face_identifier.py  insightface_node.py
src/doc_vision/launch/: face_detection.launch.py  insightface.launch.py
src/docbot_audio/: package.xml  setup.cfg  setup.py
src/docbot_audio/config/: audio.yaml
src/docbot_audio/docbot_audio/: audio_capture_node.py
src/docbot_audio/launch/: audio_capture.launch.py
src/docbot_audio/test/: test_flake8.py  test_pep257.py
src/docbot_interfaces/: CMakeLists.txt  package.xml
src/docbot_interfaces/action/: Speak.action  Transcribe.action
src/docbot_interfaces/msg/: AudioFrame.msg  DialogState.msg  EscalationEvent.msg  TriggerEvent.msg
src/docbot_interfaces/srv/: AppendHealthLog.srv  DumpAudioBuffer.srv  Escalate.srv  QueryLLM.srv  SetMicGate.srv
src/docbot_stt/: package.xml  setup.cfg  setup.py
src/docbot_stt/config/: stt.yaml
src/docbot_stt/docbot_stt/: transcribe_node.py
src/docbot_stt/launch/: stt.launch.py
src/docbot_tts/: package.xml  setup.cfg  setup.py
src/docbot_tts/config/: tts.yaml
src/docbot_tts/docbot_tts/: speak_node.py
src/docbot_tts/launch/: tts.launch.py
src/docbot_usb_mic_firmware/firmware/usb_stereo_mic/: config.h  firmware.yaml  i2s_mic.cpp  i2s_mic.h  sketch.yaml  tusb_config.h  usb_audio.h  usb_descriptors.c
