<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doc_system</name>
  <version>0.1.0</version>
  <description>System bringup launch files for DocBOT.</description>
  <maintainer email="todo@todo.com">DocBOT</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>doc_cameras</exec_depend>
  <exec_depend>doc_vision</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
