<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>docbot_audio</name>
  <version>0.1.0</version>
  <description>
    Microphone capture node for DocBot. Publishes /audio at a fixed frame
    rate, maintains a rolling forensic buffer, and serves DumpAudioBuffer
    requests to write WAV snapshots to disk.
  </description>
  <maintainer email="cacton@uw.edu">Colin Acton</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>docbot_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>
  <!-- sounddevice / PortAudio installed in the Docker image; not packaged in apt -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
